[UPD] added "le mie spese"

--- a/index.html
+++ b/index.html
@@ -6,11 +6,50 @@
     <title>Il mio Viaggio a Londra</title>
 </head>
 <body>
-    <!--introduzione-->
-    <h1>Il mio Viaggio a Londra</h1>
-    <img src="./img/pexels-bill-emrich-230794-0.jpg" altl=andscape1="">
-    <img src="./img/pexels-bill-emrich-230794-1.jpg" alt=landscape2"">
-    <img src="./img/pexels-bill-emrich-230794-2.jpg" alt=landscape3"">
+    <div>
+         <!--introduzione-->
+          <h1>Il mio Viaggio a Londra</h1>
+         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt=andscape1="">
+         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt=landscape2"">
+         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt=landscape3"">
+     </div>
     <hr>
+<div>
+    <!--Le mie spese-->
+    <h2>Le mie spese</h2>
+    <table>
+        <thead>
+            <tr>
+                <th><b>Numero</b></th>
+                <th><b>Descrizione</b></th>
+                <th><b>Costo</b></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan=2>Totale</td>
+                <td>360&euro;</td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+<hr>
 </body>
 </html>
