--- a/index.html
+++ b/index.html
@@ -51,5 +51,16 @@
     </table>
 </div>
 <hr>
+<!--Cose da fare-->
+<div>
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la tower of London &#10003;</li>
+        <li>Visitare Greeenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Covent Garden&#10003;</li>
+        <li>Mangiare il tipico Fish and chips &#10007;</li>
+    </ul>
+</div>
+<hr>
 </body>
 </html>
