[UPD] added "info utili"

--- a/index.html
+++ b/index.html
@@ -58,8 +58,31 @@
         <li>Visitare la tower of London &#10003;</li>
         <li>Visitare Greeenwich &#10003;</li>
         <li>Ascoltare un artista di strada a Covent Garden&#10003;</li>
-        <li>Mangiare il tipico Fish and chips &#10007;</li>
+        <li>Mangiare il tipico Fish and chips&#10007;</li>
     </ul>
+</div>
+<hr>
+<!--info utili-->
+<div>
+    <h3>Info Utili</h3>
+    <ol>
+        <li>Numeri utili di emergenza</li>
+        <ul>
+            <li><b>999</b> - Emergenza</li>
+            <li><b>101</b> - Nuero Polizia</li>
+            <li><b>111</b> - Numero di assistenza medica</li>
+        </ul>
+        <li>Hotel</li>
+        <ul>
+            <li><b>Nome Hotel</b> : Buckingham Palace</li>
+            <li><b>Indirizzo Hotel</b> : Westminster, London SW1A1AA, regno Unito</li>
+        </ul>
+        <li>Aereo</li>
+        <ul>
+            <li><b>Volo di Andata</b> :YI234X, ore 9.30da Milano Malpensa</li>
+            <li><b>Volo di Ritorno</b> : YI2336, ore 18.30 da London Heathrow</li>
+        </ul>
+    </ol>
 </div>
 <hr>
 </body>
