--- a/index.html
+++ b/index.html
@@ -85,5 +85,11 @@
     </ol>
 </div>
 <hr>
+<!--le foto-->
+<div>
+    <h3>Le Foto</h3>
+    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="millennium bridge">
+    <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="london bridge">
+</div>
 </body>
 </html>
