--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div>
          <!--introduzione-->
           <h1>Il mio Viaggio a Londra</h1>
-         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt=andscape1="">
-         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt=landscape2"">
-         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt=landscape3"">
+         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="andscape1">
+         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="landscape2">
+         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="landscape3">
      </div>
     <hr>
 <div>
@@ -66,22 +66,25 @@
 <div>
     <h3>Info Utili</h3>
     <ol>
-        <li>Numeri utili di emergenza</li>
-        <ul>
-            <li><b>999</b> - Emergenza</li>
-            <li><b>101</b> - Nuero Polizia</li>
-            <li><b>111</b> - Numero di assistenza medica</li>
-        </ul>
-        <li>Hotel</li>
-        <ul>
-            <li><b>Nome Hotel</b> : Buckingham Palace</li>
-            <li><b>Indirizzo Hotel</b> : Westminster, London SW1A1AA, regno Unito</li>
-        </ul>
-        <li>Aereo</li>
-        <ul>
-            <li><b>Volo di Andata</b> :YI234X, ore 9.30da Milano Malpensa</li>
-            <li><b>Volo di Ritorno</b> : YI2336, ore 18.30 da London Heathrow</li>
-        </ul>
+        <li>Numeri utili di emergenza
+            <ul>
+                <li><b>999</b> - Emergenza</li>
+                 <li><b>101</b> - Nuero Polizia</li>
+                 <li><b>111</b> - Numero di assistenza medica</li>
+            </ul>
+        </li>
+        <li>Hotel
+            <ul>
+                <li><b>Nome Hotel</b> : Buckingham Palace</li>
+                <li><b>Indirizzo Hotel</b> : Westminster, London SW1A1AA, regno Unito</li>
+            </ul>
+         </li>
+        <li>Aereo
+             <ul>
+                 <li><b>Volo di Andata</b> :YI234X, ore 9.30da Milano Malpensa</li>
+                <li><b>Volo di Ritorno</b> : YI2336, ore 18.30 da London Heathrow</li>
+             </ul>
+        </li>
     </ol>
 </div>
 <hr>
